logo in fixed position on mobile

--- a/style.css
+++ b/style.css
@@ -337,6 +337,8 @@ h1 {
         height:85px;
         text-align:center;
         margin-bottom:15px;
+        position:fixed;
+
     }
     
     .logo a {
